[package]
name = "common"
version = "0.1.2"
publish = false
edition = {  workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]

[dependencies]
walkdir = { workspace = true }
dashmap = { workspace = true }
ruff_python_parser = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_text_size = { workspace = true }
pyo3 = { workspace = true }
