[package]
name = "import-parser-rs"
version = "0.3.0"
publish = false
edition = {  workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
name = "import_parser_rs"
crate-type = ["cdylib"]

[dependencies]
common = { workspace = true }
pyo3 = { workspace = true }
